2.0.4                                       (2012-05-08)
  * Fixes: Wordpress stylesheets, USENIX, Mozilla
    https://mail1.eff.org/pipermail/https-everywhere-rules/2012-April/001105.html
  * Disable broken: Pandora, Miranda IM, Pastebin.ca
    https://trac.torproject.org/projects/tor/ticket/5804
    https://trac.torproject.org/projects/tor/ticket/5776

2.0.3                                       (2012-04-26)

  * Fix a downgrade attack that might allow attackers to deny HTTPS
    Everywhere protection for cookies on some domains.
    https://trac.torproject.org/projects/tor/ticket/5676
  * Minor redirection mechanism fixes
  * Fixes: WordPress, Yandex, OpenDNS, Via.me/AWS
  * Improvements: Mozilla
  * Disable broken: ReadWriteWeb

2.0.2                                       (2012-04-19)

  * Fix a weird wrong DOM-origin bug that occurred while redirects were in
    progress (this might have security implications, although we are unsure
    if it was exploitable).
    https://trac.torproject.org/projects/tor/ticket/5477
  * By default, use https://google.co.cctld instead of
    encrypted.google.com
  * Add an optional ruleset to use https://www.google.com
    instead of encrypted.google.com, too
  * Ruleset fixes: Debian, Kohls, Malwarebytes, Yandex, Wikipedia, Mises.org, 
                   OpenDNS, Wizards of the Coast, Lenovo, Barnes and Noble
    https://trac.torproject.org/projects/tor/ticket/5509
    https://trac.torproject.org/projects/tor/ticket/5491
    https://trac.torproject.org/projects/tor/ticket/5303
  * Stumble across more horrible security holes in the Verizon website:
    https://mail1.eff.org/pipermail/https-everywhere-rules/2012-February/001003.html
  * Disable the Gentoo ruleset on non-CAcert platforms
  * Disable buggy rulesets: IBM, Scribd, Wunderground :( :( :(
    https://trac.torproject.org/projects/tor/ticket/5344
    https://trac.torproject.org/projects/tor/ticket/5435
    https://trac.torproject.org/projects/tor/ticket/5630
    
  