@@ -1,4 +1,6 @@
 2.0.4                                       (2012-05-08)
+  * Fix for compatibility with some other Firefox extensions:
+    https://trac.torproject.org/projects/tor/ticket/5682
   * Fixes: Wordpress stylesheets, USENIX, Mozilla
     https://mail1.eff.org/pipermail/https-everywhere-rules/2012-April/001105.html
   * Disable broken: Pandora, Miranda IM, Pastebin.ca
